# info-aero

./: .bumpversion.cfg  Makefile  README.md  pyproject.toml
src/: main.py
