[tool.poetry]
name = "AeroInformes"
version = "2.2.4"
description = ""
authors = ["diego-garro <diego.garromolina@yahoo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flet = "0.12.1"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
black = "^24.10.0"
bump2version = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
